adding doc about starting tests getting rid of nasty warnings about encoding